# codex-discord-app-server-bot

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
deploy/systemd/: codex-discord-app-server-bot.service
docs/: discord-codex-app-server-design.md
migrations/: env.py
migrations/versions/: 20260321_0001_initial_schema.py  20260323_0002_turn_output_streaming.py  20260324_0003_codex_thread_catalog.py  20260325_0004_provider_support.py  20260407_0004_session_uninitialized_state.py  20260430_0005_turn_output_token_usage.py  20260515_0006_session_model_override.py
scripts/: dev.py  healthcheck.py  register_commands.py
src/codex_discord_bot/: config.py  constants.py  logging.py  main.py
src/codex_discord_bot/claude/: client_factory.py  worker.py
src/codex_discord_bot/codex/: app_server_client.py  approvals.py  artifacts.py  client_factory.py  errors.py  media_directives.py  reviews.py  session_router.py  stream_events.py  stream_renderer.py  token_usage.py  worker.py  worker_pool.py
src/codex_discord_bot/discord/: bot.py  command_tree.py  context_usage.py  intents.py
tests/: test_app_server_client.py  test_approvals.py  test_attachments.py  test_claude_client_factory.py  test_claude_worker.py  test_client_factory.py  test_codex_thread_service.py  test_command_tree.py  test_discord_chunker.py  test_media_directives.py  test_media_loader.py  test_reply_delivery.py  test_session_commands.py  test_session_service.py  test_stream_renderer.py  test_thread_messages.py  test_turn_output_controller.py  test_turn_output_service.py  test_worker_pool.py
(+44 files in other folders)
